Revert unnecessary changes